# deep-symbolic-optimization

./: pyproject.toml
dso/: setup.py
